--- a/Angular/package.json
+++ b/Angular/package.json
@@ -21,6 +21,7 @@
     "@angular/router": "~3.4.3",
     "angular-in-memory-web-api": "~0.2.1",
     "core-js": "^2.4.1",
+    "ng2-bootstrap": "^1.2.3",
     "reflect-metadata": "^0.1.8",
     "rxjs": "~5.0.1",
     "systemjs": "0.19.40",
