--- a/Angular/package.json
+++ b/Angular/package.json
@@ -29,11 +29,13 @@
     "zone.js": "^0.7.2"
   },
   "devDependencies": {
+    "@types/node": "^6.0.46",
     "concurrently": "^3.1.0",
-    "lite-server": "^2.2.2",
-    "typescript": "~2.0.10",
     "http-server": "^0.9.0",
-    "@types/node": "^6.0.46"
+    "install": "^0.8.4",
+    "lite-server": "^2.2.2",
+    "npm": "^4.1.1",
+    "typescript": "~2.0.10"
   },
   "repository": {}
 }
